fix: fix method call
Fix method call.